# Agentic-Deep-Researcher-with-MCP

./: README.md  main.py  pyproject.toml  requirements.txt
src/: agents.py  server.py
