[project]
name = "mcp-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.120.1",
    "fastapi>=0.115.9",
    "fastmcp>=2.3.5",
    "linkup-sdk>=0.2.5",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.2",
]
